# RoadMap

./: .gitignore  AGENTS.md  CLAUDE.md  achievements.md  map-GTS.md  map-GoldTrade.md  map-UserGuide.md  map-achivements.md  map-gold-trade.md  map-mingyan上海行.md  map-新年计划.md  map-春节前后安排.md  opencode.json  roadmap.md  roadmap_v1.md
.claude/: ralph-loop.local.md  settings.local.json
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
docs/: vite-tauri-architecture.md
docs/plans/: 2026-02-10-navigate-skill-design.md  2026-02-10-navigate-skill-implementation.md  2026-02-11-roadmap-manager-implementation.md  2026-02-13-inputbox-redesign-design.md  2026-02-15-subtask-delete-design.md  2026-02-15-subtask-delete-implementation.md  2026-02-15-task-description-edit-design.md  2026-02-15-task-description-edit-implementation.md  2026-02-15-taskcard-drag-sort-design.md  2026-02-15-taskcard-drag-sort-plan.md  2026-02-16-modal-event-stream-design.md  2026-02-16-modal-event-stream-implementation.md  2026-02-16-modal-prompt-output-design.md  (+15 more)
openspec/: project.md
roadmap-manager/: .gitignore  CHECKLIST.md  VITE-LAUNCHD-SETUP.md  index.html  package-lock.json  package.json  playwright.config.ts  roadmap.md  tailwind.config.js  tsconfig.json  tsconfig.server.json  vite.config.ts
roadmap-manager/src-tauri/: Cargo.toml  tauri.conf.json
roadmap-manager/src-tauri/capabilities/: main.json
roadmap-manager/src-tauri/icons/: icon.icns
roadmap-manager/src-tauri/src/: lib.rs  main.rs
users/: ports.json
(+271 files in other folders)
