[package]
name = "roadmap-manager"
version = "1.0.0"
description = "macOS native desktop app for managing roadmap.md"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "roadmap_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-fs = "2.0.0"
tauri-plugin-http = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt", "macros", "full"] }
futures-util = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
